# taskekrabbe-ui

./: .gitignore  README.md
backend/: pyproject.toml
backend/taskekrabbe_ui_backend/: app.py  models.py  scanner.py  yaml_generator.py
backend/taskekrabbe_ui_backend/routes/: scan.py  tasks.py  workflows.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  layout.ts
frontend/src/api/: client.ts
frontend/src/components/: ConfigEdge.tsx  ConfigNode.tsx  ConnectionLine.tsx  DependencyConfigModal.tsx  DirectoryPicker.tsx  InputYamlPreview.tsx  TaskDetailPanel.tsx  TaskNode.tsx  TaskPalette.tsx  ToastContainer.tsx  WorkflowCanvas.tsx  WorkflowList.tsx  YamlPreview.tsx
frontend/src/store/: toastStore.ts  workflowStore.ts
frontend/src/types/: index.ts
